[tool.poetry]
name = "pipe-dados-excel"
version = "0.1.0"
description = "Modelo de ETL para utilizar"
authors = ["Magno Barone <magnobarone@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
